--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,9 @@
         <activity
             android:name=".Login"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Signin"></activity>
+        <activity android:name=".Signin"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
